Update storefront 2026-02-11 22:14 UTC

--- a/plugins/panoramatone/index.html
+++ b/plugins/panoramatone/index.html
@@ -34,17 +34,17 @@
         <p class="hero-tagline" id="plugin-tagline">Analog-style pitch vibrato that adds lush vintage shimmer and organic movement to any sound.</p>
 
         <div class="hero-buttons" id="download-buttons">
-          <a href="#" class="btn btn-primary" id="dl-windows" data-platform="windows">
+          <a href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Windows_VST3_v0.1.0.zip" class="btn btn-primary" id="dl-windows">
             <span class="btn-icon">&oplus;</span> Download &middot; Windows VST3
           </a>
-          <a href="#" class="btn btn-primary" id="dl-macos" data-platform="macos">
+          <a href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_macOS_VST3_v0.1.0.zip" class="btn btn-primary" id="dl-macos">
             <span class="btn-icon">&#8984;</span> Download &middot; macOS VST3
           </a>
-          <a href="#" class="btn btn-primary" id="dl-linux" data-platform="linux">
+          <a href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Linux_VST3_v0.1.0.zip" class="btn btn-primary" id="dl-linux">
             <span class="btn-icon">&#128039;</span> Download &middot; Linux VST3
           </a>
         </div>
-        <p class="hero-version" id="hero-version"><!-- filled by JS --></p>
+        <p class="hero-version" id="hero-version">Latest: v0.1.0 &mdash; 2026-02-11</p>
 
         <div class="hero-secondary">
           <a href="docs/changelog.html">Release notes</a>
@@ -53,7 +53,7 @@
           <span class="dot">&middot;</span>
           <a href="docs/troubleshooting.html">Troubleshooting</a>
           <span class="dot">&middot;</span>
-          <a href="#" id="link-discussions">Feedback / Requests</a>
+          <a href="https://github.com/PilCAki/sunbunny/discussions" id="link-discussions">Feedback / Requests</a>
         </div>
       </div>
       <div class="hero-image">
@@ -124,11 +124,24 @@
     <div class="container">
       <h2>Downloads</h2>
       <p>Grab the latest release for your platform. All downloads are also available on
-        <a href="#" id="link-releases">GitHub Releases</a>.</p>
+        <a href="https://github.com/PilCAki/sunbunny/releases" id="link-releases">GitHub Releases</a>.</p>
 
       <div class="download-cards" id="download-cards">
-        <!-- populated by JS from releases.json / GitHub API -->
-        <p class="loading" id="loading-msg">Loading latest release&hellip;</p>
+                <div class="dl-card">
+          <h3>⊞ Windows VST3</h3>
+          <p>Version <strong>0.1.0</strong> · 2026-02-11</p>
+          <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Windows_VST3_v0.1.0.zip" rel="noopener">Download</a>
+        </div>
+        <div class="dl-card">
+          <h3>⌘ macOS VST3</h3>
+          <p>Version <strong>0.1.0</strong> · 2026-02-11</p>
+          <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_macOS_VST3_v0.1.0.zip" rel="noopener">Download</a>
+        </div>
+        <div class="dl-card">
+          <h3>🐧 Linux VST3</h3>
+          <p>Version <strong>0.1.0</strong> · 2026-02-11</p>
+          <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Linux_VST3_v0.1.0.zip" rel="noopener">Download</a>
+        </div>
       </div>
 
       <div class="checksum-block">
@@ -191,8 +204,8 @@ Get-FileHash .\Panoramatone_*.zip -Algorithm SHA256</code></pre>
       <div class="footer-links">
         <a href="docs/license.html">License</a>
         <a href="docs/privacy.html">Privacy</a>
-        <a href="#" id="link-footer-discussions">Feedback &amp; Support</a>
-        <a href="#" id="link-footer-issues">Report a Bug</a>
+        <a href="https://github.com/PilCAki/sunbunny/discussions">Feedback &amp; Support</a>
+        <a href="https://github.com/PilCAki/sunbunny/issues">Report a Bug</a>
       </div>
       <p class="footer-copy">&copy; <span id="footer-year">2026</span> Sunbunny. Free to use &mdash; no warranty.</p>
     </div>
