Update storefront 2026-02-12 20:53 UTC

--- a/plugins/panoramatone/index.html
+++ b/plugins/panoramatone/index.html
@@ -44,7 +44,7 @@
             <span class="btn-icon">&#128039;</span> Download &middot; Linux VST3
           </a>
         </div>
-        <p class="hero-version" id="hero-version">Latest: v0.1.0 &mdash; 2026-02-11</p>
+        <p class="hero-version" id="hero-version">Latest: v0.1.0 &mdash; 2026-02-12</p>
 
         <div class="hero-secondary">
           <a href="docs/changelog.html">Release notes</a>
@@ -123,23 +123,22 @@
   <section class="downloads" id="downloads">
     <div class="container">
       <h2>Downloads</h2>
-      <p>Grab the latest release for your platform. All downloads are also available on
-        <a href="https://github.com/PilCAki/sunbunny/releases" id="link-releases">GitHub Releases</a>.</p>
+      <p>Grab the latest release for your platform.</p>
 
       <div class="download-cards" id="download-cards">
                 <div class="dl-card">
           <h3>⊞ Windows VST3</h3>
-          <p>Version <strong>0.1.0</strong> · 2026-02-11</p>
+          <p>Version <strong>0.1.0</strong> · 2026-02-12</p>
           <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Windows_VST3_v0.1.0.zip" rel="noopener">Download</a>
         </div>
         <div class="dl-card">
           <h3>⌘ macOS VST3</h3>
-          <p>Version <strong>0.1.0</strong> · 2026-02-11</p>
+          <p>Version <strong>0.1.0</strong> · 2026-02-12</p>
           <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_macOS_VST3_v0.1.0.zip" rel="noopener">Download</a>
         </div>
         <div class="dl-card">
           <h3>🐧 Linux VST3</h3>
-          <p>Version <strong>0.1.0</strong> · 2026-02-11</p>
+          <p>Version <strong>0.1.0</strong> · 2026-02-12</p>
           <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Linux_VST3_v0.1.0.zip" rel="noopener">Download</a>
         </div>
       </div>
