Update storefront 2026-02-15 17:57 UTC

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
           <p>Analog-style pitch vibrato that adds lush vintage shimmer and organic movement to any sound.</p>
         </div>
       </a>
+      <a href="plugins/tentacles/" class="plugin-card">
+        <img src="assets/plugins/tentacles/tentacles_vst_screenshot.png" alt="Sunbunny Tentacles" class="plugin-card-img">
+        <div class="plugin-card-body">
+          <h3>Sunbunny Tentacles</h3>
+          <p>Quadruple stereo vibrato with spatio-spectral panning — place four modulation layers in 2D audio space.</p>
+        </div>
+      </a>
       </div>
     </div>
   </section>
@@ -103,6 +110,7 @@
       <div class="footer-links">
         <a href="music.html">Music</a>
         <a href="plugins/panoramatone/">Panoramatone</a>
+        <a href="plugins/tentacles/">Tentacles</a>
       </div>
       <p class="footer-copy">&copy; <span id="footer-year">2026</span> Sunbunny. Free to use &mdash; no warranty.</p>
     </div>
