--- a/music.html
+++ b/music.html
@@ -121,6 +121,7 @@
       <div class="footer-links">
         <a href="music.html">Music</a>
         <a href="plugins/panoramatone/">Panoramatone</a>
+        <a href="plugins/tentacles/">Tentacles</a>
       </div>
       <p class="footer-copy">&copy; <span id="footer-year">2026</span> Sunbunny. Free to use &mdash; no warranty.</p>
     </div>
