--- a/plugins/tentacles/index.html
+++ b/plugins/tentacles/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sunbunny Panoramatone — Analog-style pitch vibrato that adds lush vintage shimmer and organic movement to any sound.</title>
-  <meta name="description" content="Free VST3 stereo vibrato plugin for Windows, macOS, and Linux. Warm, lush, and effortlessly weird.">
+  <title>Sunbunny Tentacles — Quadruple stereo vibrato with spatio-spectral panning</title>
+  <meta name="description" content="Multi-band modulated vibrato VST3 plugin with a novel X-Y pad for placing tentacles in frequency and stereo space. Pay what you want.">
   <link rel="icon" href="../../assets/headshot.png" type="image/png">
   <link rel="stylesheet" href="../../style.css">
 </head>
@@ -30,21 +30,16 @@
   <section class="hero">
     <div class="container hero-inner">
       <div class="hero-text">
-        <h1 class="hero-title" id="plugin-name">Sunbunny Panoramatone</h1>
-        <p class="hero-tagline" id="plugin-tagline">Analog-style pitch vibrato that adds lush vintage shimmer and organic movement to any sound.</p>
+        <h1 class="hero-title" id="plugin-name">Sunbunny Tentacles</h1>
+        <p class="hero-tagline" id="plugin-tagline">Quadruple stereo vibrato with spatio-spectral panning — place four modulation layers in 2D audio space.</p>
 
         <div class="hero-buttons" id="download-buttons">
-          <a href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Windows_VST3_v0.1.0.zip" class="btn btn-primary" id="dl-windows">
-            <span class="btn-icon">&oplus;</span> Download &middot; Windows VST3
+          <a href="https://sunbunnyplugins.gumroad.com/l/tentacles?layout=profile" class="btn btn-primary" target="_blank" rel="noopener">
+            Get Tentacles on Gumroad
           </a>
-          <a href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_macOS_VST3_v0.1.0.zip" class="btn btn-primary" id="dl-macos">
-            <span class="btn-icon">&#8984;</span> Download &middot; macOS VST3
-          </a>
-          <a href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Linux_VST3_v0.1.0.zip" class="btn btn-primary" id="dl-linux">
-            <span class="btn-icon">&#128039;</span> Download &middot; Linux VST3
-          </a>
+          <p class="pwyw-note">Pay what you want &mdash; $0 minimum</p>
         </div>
-        <p class="hero-version" id="hero-version">Latest: v0.1.0 &mdash; 2026-02-15</p>
+        <p class="hero-version" id="hero-version">Latest: v &mdash; </p>
 
         <div class="hero-secondary">
           <a href="docs/changelog.html">Release notes</a>
@@ -57,7 +52,7 @@
         </div>
       </div>
       <div class="hero-image">
-        <img src="../../assets/plugins/panoramatone/panoramatone_2_11_2026.png" alt="Sunbunny Panoramatone screenshot" id="hero-img">
+        <img src="../../assets/plugins/tentacles/tentacles_vst_screenshot.png" alt="Sunbunny Tentacles screenshot" id="hero-img">
       </div>
     </div>
   </section>
@@ -68,7 +63,7 @@
       <h2>Screenshots</h2>
       <div class="screenshot-grid">
                 <div class="screenshot-card">
-          <img src="../../assets/plugins/panoramatone/screenshots/panoramatone_2_11_2026.png" alt="Panoramatone plugin UI" loading="lazy">
+          <img src="../../assets/plugins/tentacles/screenshots/tentacles_vst_screenshot.png" alt="Tentacles plugin UI — X-Y spatio-spectral pad" loading="lazy">
         </div>
       </div>
     </div>
@@ -79,12 +74,16 @@
     <div class="container">
       <h2>What It Does</h2>
       <ul class="feature-list">
-                <li><strong>True stereo vibrato</strong> — smooth pitch modulation with adjustable depth and rate.</li>
-        <li><strong>Warm analog character</strong> — subtle saturation and rich analog-style pitch shifting.</li>
+                <li><strong>Interactive X-Y pad</strong> — drag colored dots to place each tentacle in 2D audio space: X = stereo pan, Y = frequency band (80 Hz–12 kHz, log-scaled).</li>
+        <li><strong>4 independent tentacles</strong> — each with its own vibrato rate &amp; depth, band-pass filter, saturation, and stereo pan.</li>
+        <li><strong>Two vibrato algorithms</strong> — classic delay-line vibrato and allpass pitch-shift (Panoramatone-style).</li>
+        <li><strong>Drift / chaos control</strong> — per-tentacle organic modulation of rate, pan, and filter. Subtle sway to beautifully unhinged.</li>
+        <li><strong>Live visual feedback</strong> — dots pulse and glow with the real DSP LFO; ghost trails show drift paths.</li>
+        <li><strong>Mono in → stereo out</strong> — feed it a mono guitar or vocal and get a wide, detailed stereo field.</li>
         <li><strong>Lightweight</strong> — near-zero CPU on all platforms.</li>
         <li><strong>VST3 format</strong> — works in every major DAW (Ableton, FL Studio, Reaper, Bitwig, Logic via wrapper, etc.).</li>
-        <li><strong>Windows, macOS, Linux</strong> — support across operating systems.</li>
-        <li><strong>Free</strong> — no sign-up, no activation, no telemetry.</li>
+        <li><strong>Windows, macOS, Linux</strong> — all three platforms supported.</li>
+        <li><strong>Pay what you want</strong> — $0 minimum. No sign-up, no activation, no telemetry.</li>
       </ul>
     </div>
   </section>
@@ -123,72 +122,24 @@
   <section class="downloads" id="downloads">
     <div class="container">
       <h2>Downloads</h2>
-      <p>Grab the latest release for your platform.</p>
+      <p>Hosted on Gumroad &mdash; pay what you want ($0 minimum).
+         All platforms included in one download.</p>
 
       <div class="download-cards" id="download-cards">
-                <div class="dl-card">
-          <h3>⊞ Windows VST3</h3>
-          <p>Version <strong>0.1.0</strong> · 2026-02-15</p>
-          <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Windows_VST3_v0.1.0.zip" rel="noopener">Download</a>
-        </div>
-        <div class="dl-card">
-          <h3>⌘ macOS VST3</h3>
-          <p>Version <strong>0.1.0</strong> · 2026-02-15</p>
-          <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_macOS_VST3_v0.1.0.zip" rel="noopener">Download</a>
-        </div>
-        <div class="dl-card">
-          <h3>🐧 Linux VST3</h3>
-          <p>Version <strong>0.1.0</strong> · 2026-02-15</p>
-          <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.1.0/Panoramatone_Linux_VST3_v0.1.0.zip" rel="noopener">Download</a>
+                <div class="dl-card dl-card-gumroad">
+          <h3>Get on Gumroad</h3>
+          <p>Windows, macOS &amp; Linux VST3 included.</p>
+          <a class="dl-btn" href="https://sunbunnyplugins.gumroad.com/l/tentacles?layout=profile" target="_blank" rel="noopener">Get Tentacles</a>
+          <p class="pwyw-note">Pay what you want &mdash; $0 minimum. Pay more if you’d like to support development.</p>
         </div>
       </div>
 
-            <div class="checksum-block">
-        <h3>Verify Your Download</h3>
-        <p>Compare the SHA-256 checksum of the zip you downloaded against
-           <a href="downloads/SHA256SUMS.txt">SHA256SUMS.txt</a>.</p>
-        <pre><code># macOS / Linux
-shasum -a 256 Panoramatone_*.zip
-
-# Windows (PowerShell)
-Get-FileHash .\Panoramatone_*.zip -Algorithm SHA256</code></pre>
-      </div>
+      
     </div>
   </section>
 
   <!-- ══════════════════════════ TRUST & SAFETY ══════════════════════════════ -->
-    <section class="trust">
-    <div class="container">
-      <h2>Trust &amp; Safety</h2>
-      <p>This plugin is an independent freeware project. The builds are currently
-         <strong>unsigned and unnotarized</strong>, which means your OS may show a
-         warning the first time you open it.</p>
-      <div class="trust-grid">
-        <div class="trust-card">
-          <h3>&oplus; Windows SmartScreen</h3>
-          <p>If Windows shows a &ldquo;Windows protected your PC&rdquo; dialog:</p>
-          <ol><li>Click <strong>More info</strong></li>
-          <li>Click <strong>Run anyway</strong></li></ol>
-          <p>Distributing as a <code>.zip</code> (not an installer) greatly reduces
-             the chance of SmartScreen triggering.</p>
-        </div>
-        <div class="trust-card">
-          <h3>&#8984; macOS Gatekeeper</h3>
-          <p>If macOS says the file &ldquo;can&rsquo;t be opened because it is from an
-             unidentified developer&rdquo;:</p>
-          <ol><li>Open <strong>System Settings &rarr; Privacy &amp; Security</strong></li>
-          <li>Scroll down and click <strong>Open Anyway</strong></li></ol>
-        </div>
-        <div class="trust-card">
-          <h3>&#128274; Verify checksums</h3>
-          <p>Every release includes a <code>SHA256SUMS.txt</code> file.</p>
-          <p><a href="downloads/SHA256SUMS.txt">View checksums &rarr;</a></p>
-        </div>
-      </div>
-      <p class="trust-note">Unsigned/unnotarized because this is an early freeware
-         experiment. Code signing and notarization will be added if demand warrants it.</p>
-    </div>
-  </section>
+  
 
   <!-- ════════════════════════════════ FOOTER ════════════════════════════════ -->
   <footer class="site-footer">
@@ -207,12 +158,12 @@ Get-FileHash .\Panoramatone_*.zip -Algorithm SHA256</code></pre>
   <script src="../../app.js"></script>
   <script>
     window.PLUGIN_CONFIG = {
-      name:         "Sunbunny Panoramatone",
-      slug:         "panoramatone",
+      name:         "Sunbunny Tentacles",
+      slug:         "tentacles",
       owner:        "PilCAki",
       repo:         "sunbunny",
-      downloadType: "standard",
-      gumroadUrl:   "",
+      downloadType: "gumroad",
+      gumroadUrl:   "https://sunbunnyplugins.gumroad.com/l/tentacles?layout=profile",
       releasesUrl:  "https://api.github.com/repos/PilCAki/sunbunny/releases",
       releasesPage: "https://github.com/PilCAki/sunbunny/releases",
       discussions:  "https://github.com/PilCAki/sunbunny/discussions",
