Update storefront 2026-02-17 15:34 UTC

--- a/music.html
+++ b/music.html
@@ -17,7 +17,8 @@
         <img src="assets/headshot.png" alt="Sunbunny" class="logo-img">
       </a>
       <nav class="main-nav">
-        <a href="music.html">Music</a>
+        <a href="index.html">Home</a>
+        <a href="music.html" class="nav-active" aria-current="page">Music</a>
         <a href="https://www.instagram.com/sunbunnyband" target="_blank" rel="noopener">Instagram</a>
         <a href="index.html#plugins" class="nav-cta">Plugins</a>
       </nav>
