--- a/plugins/panoramatone/index.html
+++ b/plugins/panoramatone/index.html
@@ -17,6 +17,10 @@
         <img src="../../assets/headshot.png" alt="Sunbunny" class="logo-img">
       </a>
       <nav class="main-nav">
+        <a href="../../index.html">Home</a>
+        <a href="../../music.html">Music</a>
+        <a href="../../index.html#plugins">Plugins</a>
+        <span class="nav-sep" aria-hidden="true"></span>
         <a href="docs/install.html">Install</a>
         <a href="docs/changelog.html">Changelog</a>
         <a href="docs/troubleshooting.html">Help</a>
@@ -44,7 +48,7 @@
             <span class="btn-icon">&#128039;</span> Download &middot; Linux VST3
           </a>
         </div>
-        <p class="hero-version" id="hero-version">Latest: v0.2.0 &mdash; 2026-02-16</p>
+        <p class="hero-version" id="hero-version">Latest: v0.2.0 &mdash; 2026-02-17</p>
 
         <div class="hero-secondary">
           <a href="docs/changelog.html">Release notes</a>
@@ -128,17 +132,17 @@
       <div class="download-cards" id="download-cards">
                 <div class="dl-card">
           <h3>⊞ Windows VST3</h3>
-          <p>Version <strong>0.2.0</strong> · 2026-02-16</p>
+          <p>Version <strong>0.2.0</strong> · 2026-02-17</p>
           <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.2.0/Panoramatone_Windows_VST3_v0.2.0.zip" rel="noopener">Download</a>
         </div>
         <div class="dl-card">
           <h3>⌘ macOS VST3</h3>
-          <p>Version <strong>0.2.0</strong> · 2026-02-16</p>
+          <p>Version <strong>0.2.0</strong> · 2026-02-17</p>
           <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.2.0/Panoramatone_macOS_VST3_v0.2.0.zip" rel="noopener">Download</a>
         </div>
         <div class="dl-card">
           <h3>🐧 Linux VST3</h3>
-          <p>Version <strong>0.2.0</strong> · 2026-02-16</p>
+          <p>Version <strong>0.2.0</strong> · 2026-02-17</p>
           <a class="dl-btn" href="https://github.com/PilCAki/sunbunny/releases/download/v0.2.0/Panoramatone_Linux_VST3_v0.2.0.zip" rel="noopener">Download</a>
         </div>
       </div>
@@ -194,6 +198,8 @@ Get-FileHash .\Panoramatone_*.zip -Algorithm SHA256</code></pre>
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="footer-links">
+        <a href="../../index.html">Home</a>
+        <a href="../../music.html">Music</a>
         <a href="docs/license.html">License</a>
         <a href="docs/privacy.html">Privacy</a>
         <a href="https://github.com/PilCAki/sunbunny/discussions">Feedback &amp; Support</a>
