--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <img src="assets/headshot.png" alt="Sunbunny" class="logo-img">
       </a>
       <nav class="main-nav">
+        <a href="index.html" class="nav-active" aria-current="page">Home</a>
         <a href="music.html">Music</a>
         <a href="https://www.instagram.com/sunbunnyband" target="_blank" rel="noopener">Instagram</a>
         <a href="index.html#plugins" class="nav-cta">Plugins</a>
