--- a/plugins/tentacles/index.html
+++ b/plugins/tentacles/index.html
@@ -17,6 +17,10 @@
         <img src="../../assets/headshot.png" alt="Sunbunny" class="logo-img">
       </a>
       <nav class="main-nav">
+        <a href="../../index.html">Home</a>
+        <a href="../../music.html">Music</a>
+        <a href="../../index.html#plugins">Plugins</a>
+        <span class="nav-sep" aria-hidden="true"></span>
         <a href="docs/install.html">Install</a>
         <a href="docs/changelog.html">Changelog</a>
         <a href="docs/troubleshooting.html">Help</a>
@@ -143,6 +147,8 @@
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="footer-links">
+        <a href="../../index.html">Home</a>
+        <a href="../../music.html">Music</a>
         <a href="docs/license.html">License</a>
         <a href="docs/privacy.html">Privacy</a>
         <a href="https://github.com/PilCAki/sunbunny/discussions">Feedback &amp; Support</a>
