Update storefront 2026-02-17 15:46 UTC

--- a/plugins/tentacles/index.html
+++ b/plugins/tentacles/index.html
@@ -20,10 +20,7 @@
         <a href="../../index.html">Home</a>
         <a href="../../music.html">Music</a>
         <a href="../../index.html#plugins">Plugins</a>
-        <span class="nav-sep" aria-hidden="true"></span>
-        <a href="docs/install.html">Install</a>
-        <a href="docs/changelog.html">Changelog</a>
-        <a href="docs/troubleshooting.html">Help</a>
+        <a href="https://www.instagram.com/sunbunnyband" target="_blank" rel="noopener">Instagram</a>
         <a href="#downloads" class="nav-cta">Download</a>
       </nav>
     </div>
@@ -51,6 +48,8 @@
           <a href="docs/troubleshooting.html">Troubleshooting</a>
           <span class="dot">&middot;</span>
           <a href="https://github.com/PilCAki/sunbunny/discussions" id="link-discussions">Feedback / Requests</a>
+          <span class="dot">&middot;</span>
+          <a href="https://www.instagram.com/sunbunnyband" target="_blank" rel="noopener">Instagram</a>
         </div>
       </div>
       <div class="hero-image">
